--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,184 @@
-.App {
+html { 
+  background: url(images/resumebg3.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#button-container {
+  position: absolute;
+  top: 0px;
+  
+}
+
+.menubutton {
+  font-size: 30px;
+  background: none;
+  border: none;-webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1s; /* Firefox < 16 */
+   -ms-animation: fadein 1s; /* Internet Explorer */
+    -o-animation: fadein 1s; /* Opera < 12.1 */
+       animation: fadein 1s;
+}
+
+#home-container {
+  margin-top: 20px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 35px;
+  -webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2.5s; /* Firefox < 16 */
+   -ms-animation: fadein 2.5s; /* Internet Explorer */
+    -o-animation: fadein 2.5s; /* Opera < 12.1 */
+       animation: fadein 2.5s;
+}
+
+.home-paragraph {
+  text-size-adjust: auto;
+  margin-top: 20px;
+  max-width: 450px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  background-color: #97979771;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#name-header {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home {
+  font-size: xx-large;
+  background: none;
+  border: none;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+       animation: fadein 2s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menubutton:hover {
+  transform: scale(1.4);
+}
+
+.home:hover {
+  transform: scale(1.4);
+}
+
+#navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  box-shadow: 1px 1px 1px black;
+  min-width: 200px;
+  z-index: 1;
+  background-color: #97979771;
+  width: 25%;
+  height: 100%;
+  transition: ease-in 220ms;
+  transform: translateX(-105%);
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px black;
+}
+
+#navbarexit {
+  margin-left: 90%;
+  margin-top: 5px;
+  margin-bottom: 0px;
+  border-radius: 100%;
+  border: none;
+  scale: 1.4;
+  text-align: center;
+  background-color: rgba(220, 75, 50, 0.6);
+}
+
+#navbarexit:hover {
+  transform: scale(1.4);
+}
+
+#navbar.activate {
+  transform: translateX(-5%);
+}
+
+
+ul {
+  list-style: none;
+  line-height: 50px;
+}
+
+.footer {
+  border-top: 4mm ridge rgba(211, 220, 50, .6);
+  background-color: rgba(211, 220, 50, .6);
+  position: absolute;
+  text-align: center;
+  border-radius: 15px;
+  bottom: 0;
+  width: 100%;
+  opacity: 100%;
+}
+
+.navbarheader {
+  text-align: center;
+  text-shadow: 13px;
+  /*background-color: rgba(104, 220, 50, 0.6);*/
+  border-radius: 15px;
+  margin-top: 5px;
+}
+
+.testbutton {
+  position: absolute;
+  right:0;
+}
+
+.navbarlist {
+  list-style: none;
+}
+
+.btn {
+  background-color: rgba(220, 152, 50);
+  border-radius: 15px;
+  min-width: 80px;
+  padding: 10px;
+  border-style: none;
+  opacity: 100%;
+}
+
+.btn:hover {
+  transform: scale(1.3); 
+}
+
+#profile {
+  margin-top: 20px;
+  max-width: 25%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 35px;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+}
+
+.twittercontainer {
+  margin-top: 15px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+       animation: fadein 2s;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +188,33 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
