All changes related to adding styling and functionality to the blog

--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@ ul {
 }
 
 .twittercontainer {
-  margin-top: 10px;
+  margin-top: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -191,31 +191,38 @@ ul {
 
 .bloglet {
   margin-top: 15px;
-  background-color: #3b393942;
+  background-color: #e9e3e359;
   border-radius: 15px;
   width: 50%;
   min-width: 400px;
+}
+
+.bloglet:hover {
+  background-color: #E6976380;
 }
 
 .blogletheader {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0px;
   text-align: center;
-}
-
-.blogletheader:hover {
-  background-color: beige;
-  border-radius: 15px;
-  width: 90%;
 }
 
 .blogletdate {
   display: flex;
   flex-direction: column;
+  text-align: right;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0px;
+  margin-bottom: 5px;
   width: 90%;
+}
+
+.blogletexcerpt {
+  margin-top: 0px;
+  text-align: center;
 }
 
 .body {
@@ -223,7 +230,22 @@ ul {
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
   width: 90%;
+  padding: 15px;
+  border-radius: 15px;
+  background-color: azure;
+}
+
+.buttoncontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.blogbutton {
+  margin-bottom: 10px;
 }
 
 @keyframes App-logo-spin {
