--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-html { 
-  background: url(images/resumebg3.jpg) no-repeat center center fixed; 
+html {
+  background: url(images/resumebg3.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,17 +9,17 @@ html {
 #button-container {
   position: absolute;
   top: 0px;
-  
 }
 
 .menubutton {
   font-size: 30px;
   background: none;
-  border: none;-webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  border: none;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 1s; /* Firefox < 16 */
-   -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-       animation: fadein 1s;
+  -ms-animation: fadein 1s; /* Internet Explorer */
+  -o-animation: fadein 1s; /* Opera < 12.1 */
+  animation: fadein 1s;
 }
 
 #home-container {
@@ -32,9 +32,9 @@ html {
   border-radius: 35px;
   -webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2.5s; /* Firefox < 16 */
-   -ms-animation: fadein 2.5s; /* Internet Explorer */
-    -o-animation: fadein 2.5s; /* Opera < 12.1 */
-       animation: fadein 2.5s;
+  -ms-animation: fadein 2.5s; /* Internet Explorer */
+  -o-animation: fadein 2.5s; /* Opera < 12.1 */
+  animation: fadein 2.5s;
 }
 
 .home-paragraph {
@@ -62,9 +62,9 @@ html {
   border: none;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
-   -ms-animation: fadein 2s; /* Internet Explorer */
-    -o-animation: fadein 2s; /* Opera < 12.1 */
-       animation: fadein 2s;
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
 }
 
 .menubutton:hover {
@@ -100,7 +100,7 @@ html {
   border: none;
   scale: 1.4;
   text-align: center;
-  background-color: rgba(220, 75, 50, 0.6);
+  background-color: rgba(220, 75, 50, 0.0);
 }
 
 #navbarexit:hover {
@@ -108,9 +108,8 @@ html {
 }
 
 #navbar.activate {
-  transform: translateX(-5%);
+  transform: translateX(0%);
 }
-
 
 ul {
   list-style: none;
@@ -118,8 +117,8 @@ ul {
 }
 
 .footer {
-  border-top: 4mm ridge rgba(211, 220, 50, .6);
-  background-color: rgba(211, 220, 50, .6);
+  border-top: 4mm ridge rgba(211, 220, 50, 0.6);
+  background-color: rgba(211, 220, 50, 0.6);
   position: absolute;
   text-align: center;
   border-radius: 15px;
@@ -138,7 +137,7 @@ ul {
 
 .testbutton {
   position: absolute;
-  right:0;
+  right: 0;
 }
 
 .navbarlist {
@@ -155,7 +154,7 @@ ul {
 }
 
 .btn:hover {
-  transform: scale(1.3); 
+  transform: scale(1.2);
 }
 
 #profile {
@@ -172,17 +171,20 @@ ul {
 .twittercontainer {
   margin-top: 35px;
   display: flex;
-  align-items: center;
   justify-content: center;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
-   -ms-animation: fadein 2s; /* Internet Explorer */
-    -o-animation: fadein 2s; /* Opera < 12.1 */
-       animation: fadein 2s;
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
+}
+
+.twitterframe {
+  justify-content: center;
 }
 
 #blogtainer {
-  margin-top: 10px;
+  margin-top: 35px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -198,7 +200,7 @@ ul {
 }
 
 .bloglet:hover {
-  background-color: #E6976380;
+  background-color: #e6976380;
 }
 
 .blogletheader {
@@ -248,6 +250,42 @@ ul {
   margin-bottom: 10px;
 }
 
+.resume-container {
+  display: flex;
+  justify-content: center;
+}
+
+.resume-subcontainer {
+  margin-top: 35px;
+  width: 50%;
+  min-width: 400px;
+  flex-direction: column;
+}
+
+.resume-background {
+  justify-self: center;
+  background-color: #e9e3e359;
+  border-radius: 15px;
+}
+
+.resume-margin {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.resume-p {
+  margin: 0px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  text-indent: 25px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -258,30 +296,50 @@ ul {
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
